2002-10-24  Angus Leeming  <leeming@lyx.org>

	* lyxgluelength.h: no need to forward declare BufferParams
	or BufferView, so don't.

2002-10-21  John Levon  <levon@movementarian.org>

	* BufferView.C: menuUndo ->undo, redo
 
	* BufferView.h: document, remove dead, make some methods private
 
	* paragraph_funcs.h:
	* paragraph_funcs.C: 
	* CutAndPaste.C: s/pasteParagraph/mergeParagraph
 
	* buffer.h:
	* buffer.C:
	* sgml.h:
	* sgml.C: move sgml open/close tag into sgml.C
 
	* bufferview_funcs.h: unused prototype
 
	* lyxfunc.h:
	* lyxfunc.C: remove unused
 
	* lyxtext.h:
	* text.C: remove unused
 
2002-10-21  John Levon  <levon@movementarian.org>

	* BufferView.h:
	* BufferView.C:
	* BufferView_pimpl.h:
	* BufferView_pimpl.C: fix mouse wheel handling based on
	  patch from Darren Freeman
 
2002-10-09  Dekel Tsur  <dekelts@tau.ac.il>

	* lyx_main.C (queryUserLyXDir): Fix automatic reconfiguration.

2002-10-17  Dekel Tsur  <dekelts@tau.ac.il>

	* lyxlength.C (inPixels): Fix hanfling of negative length.
	Fix LyXLength::MU case.

2002-10-16  John Levon  <levon@movementarian.org>

	* buffer.C: remove \\protected_separator parsing done by lyx2lyx now
 
2002-10-16  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* converter.C (view): add support for $$i (file name) and $$p
	(file path) for the viewer command. If $$i is not specified, then
	it is appended to the command (for compatibility with old syntax)

2002-10-14  Juergen Vigna  <jug@sad.it>

	* undo_funcs.C (textHandleUndo): alter the order in which the
	new undopar is added to the LyXText, as we have to set first
	the right prev/next and then add it as otherwise the rebuild of
	LyXText is not correct. Also reset the cursor to the right paragraph,
	with this IMO we could remove the hack in "redoParagraphs()".

2002-10-09  Angus Leeming  <leeming@lyx.org>

	* Bufferview_pimpl.C (dispatch): call InsetCitation::setLoadingBuffer
	to turn off an optimisation if a new inset is to be inserted.
